--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1372,8 +1372,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 600px;
-  margin: 0 auto;
   width: 100%;
 }
 
@@ -1426,6 +1424,7 @@
   max-width: 300px;
   aspect-ratio: 1;
   pointer-events: none;
+  z-index: 10;
 }
 
 .qrScannerCorner {
