switch qr code libraries

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1440,6 +1440,12 @@
   overflow: hidden;
 }
 
+.qrScannerVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .qrScannerOverlayBox {
   position: absolute;
   top: 50%;
